Modified UI & move titles to resx

--- a/Travely.Client/Pages/DashboardPage.xaml
+++ b/Travely.Client/Pages/DashboardPage.xaml
@@ -4,7 +4,7 @@
              xmlns:resources="clr-namespace:Travely.Client.Resources.UIResources"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="Travely.Client.Pages.DashboardPage"
-             Title="TRAVELY" >
+             Title="{x:Static resources:PageNameResources.DashboardPageName}" >
 
 
     <ScrollView>
