--- a/Travely.Client/Pages/TripsPage.xaml
+++ b/Travely.Client/Pages/TripsPage.xaml
@@ -4,7 +4,7 @@
              xmlns:resources="clr-namespace:Travely.Client.Resources.UIResources"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="Travely.Client.Pages.TripsPage"
-             Title="My Trips">
+             Title="{x:Static resources:PageNameResources.TripPageName}">
 
     <ScrollView>
         <VerticalStackLayout>
@@ -28,8 +28,8 @@
 
                 <ImageButton 
                     Grid.Column="1"
-                    Source="up_down.png"
-                    HeightRequest="45" 
+                    Source="sort.png"
+                    HeightRequest="40" 
                     WidthRequest="45" 
                     HorizontalOptions="End" 
                     VerticalOptions="Center"
@@ -39,7 +39,7 @@
             <CollectionView x:DataType="viewModels:TripsViewModel" ItemsSource="{Binding Trips}" SelectionMode="Single" >
                 <CollectionView.ItemTemplate>
                     <DataTemplate x:DataType="viewModels:TripViewModel">
-                        <Frame Margin="10" Padding="0">
+                        <Frame Margin="10,20,10,0" Padding="0">
                             <Grid>
                                 <Grid.RowDefinitions>
                                     <RowDefinition Height="Auto"/>
@@ -51,11 +51,11 @@
                                 </Grid.ColumnDefinitions>
 
                                 <Grid Grid.Column="0" >
-                                    <StackLayout Margin="10">
+                                    <StackLayout Margin="0,10,0,0">
                                         <Label Text="{Binding TripTitle}" FontAttributes="Bold" FontSize="18" HorizontalOptions="Center" VerticalOptions="Center"/>
-                                        <Image Source="{Binding CountryFlagUrl}" HeightRequest="70" HorizontalOptions="Center" />
-                                        <StackLayout Grid.Column="1" VerticalOptions="Center" Margin="10,0,0,0">
-                                            <Grid>
+                                        <Image Source="{Binding CountryFlagUrl}" HeightRequest="60" HorizontalOptions="Center" VerticalOptions="Center" Margin="0,10,0,10"/>
+                                        <StackLayout Grid.Column="1" VerticalOptions="Center" HorizontalOptions="Center">
+                                            <Grid ColumnSpacing="40">
                                                 <Grid.RowDefinitions>
                                                     <RowDefinition Height="Auto"/>
                                                     <RowDefinition Height="Auto"/>
@@ -66,13 +66,13 @@
                                                     <ColumnDefinition Width="Auto"/>
                                                 </Grid.ColumnDefinitions>
 
-                                                <Label Text="{x:Static resources:TripsResources.Country}" FontAttributes="Bold" FontSize="16" Grid.Row="0" Grid.Column="0"/>
-                                                <Label Text="{x:Static resources:TripsResources.StartDate}" FontAttributes="Bold" FontSize="16" Grid.Row="0" Grid.Column="1"/>
-                                                <Label Text="{x:Static resources:TripsResources.EndDate}" FontAttributes="Bold" FontSize="16" Grid.Row="0" Grid.Column="2"/>
+                                                <Label Text="{x:Static resources:TripsResources.Country}" FontAttributes="Bold" FontSize="16" Grid.Row="0" Grid.Column="0"  HorizontalOptions="Center"  VerticalOptions="Center" Padding="30,0,0,0" />
+                                                <Label Text="{x:Static resources:TripsResources.StartDate}" FontAttributes="Bold" FontSize="16" Grid.Row="0" Grid.Column="1"  HorizontalOptions="Center"  VerticalOptions="Center"  />
+                                                <Label Text="{x:Static resources:TripsResources.EndDate}" FontAttributes="Bold" FontSize="16" Grid.Row="0" Grid.Column="2" HorizontalOptions="Center"  VerticalOptions="Center"/>
 
-                                                <Label Text="{Binding CountryName}" FontSize="16" Grid.Row="1" Grid.Column="0" Margin="0,0,50,0"/>
-                                                <Label Text="{Binding StartDate, StringFormat='{0:dd.MM.yyyy}'}" Grid.Row="1" Grid.Column="1" Margin="0,0,50,0"/>
-                                                <Label Text="{Binding EndDate, StringFormat='{0:dd.MM.yyyy}'}" Grid.Row="1" Grid.Column="2" Margin="0,0,40,0" />
+                                                <Label Text="{Binding CountryName}" FontSize="16" Grid.Row="1" Grid.Column="0"  HorizontalOptions="Center"  VerticalOptions="Center" Margin="30,0,0,0" />
+                                                <Label Text="{Binding StartDate, StringFormat='{0:dd.MM.yyyy}'}" Grid.Row="1" Grid.Column="1"  HorizontalOptions="Center"  VerticalOptions="Center"   />
+                                                <Label Text="{Binding EndDate, StringFormat='{0:dd.MM.yyyy}'}" Grid.Row="1" Grid.Column="2"  HorizontalOptions="Center"  VerticalOptions="Center"   />
                                             </Grid>
                                         </StackLayout>
                                     </StackLayout>
