--- a/Travely.Client/Pages/PlanTripPage.xaml
+++ b/Travely.Client/Pages/PlanTripPage.xaml
@@ -5,7 +5,7 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="Travely.Client.Pages.PlanTripPage"
              x:DataType="viewModels:TripViewModel"
-             Title="Plan A Trip">
+             Title="{x:Static resources:PageNameResources.PlanTripPageName}">
     
     <Grid>
         <StackLayout>
