--- a/Travely.Client/Pages/EditTripPage.xaml
+++ b/Travely.Client/Pages/EditTripPage.xaml
@@ -211,8 +211,18 @@
                     <Frame BorderColor="Black" CornerRadius="5" Padding="0" Margin="5" >
                         <Grid>
                             <Image Source="plane_ticket.png" VerticalOptions="Center" WidthRequest="20" HorizontalOptions="Start" Margin="10"/>
-                            <Entry Placeholder="{x:Static resources:TripsResources.FlightNumber}" Margin="30,0,0,0"/>
-                            <ImageButton Grid.Column="3" Source="add_btn.png" HorizontalOptions="End" WidthRequest="30" HeightRequest="30" Margin="30,0,5,0"/>
+                            <Entry 
+                                Placeholder="{x:Static resources:TripsResources.FlightNumber}" 
+                                Text="{Binding FlightNumber}"
+                                Margin="30,0,0,0"/>
+                            <ImageButton 
+                                Command="{Binding SearchFlightCommand}"
+                                Grid.Column="3" 
+                                Source="add_btn.png" 
+                                HorizontalOptions="End" 
+                                WidthRequest="30" 
+                                HeightRequest="30" 
+                                Margin="30,0,5,0"/>
                         </Grid>
                     </Frame>
 
