Added logic to retrieve the dates of the trip from the database

--- a/Travely.Client/Pages/EditTripPage.xaml
+++ b/Travely.Client/Pages/EditTripPage.xaml
@@ -101,6 +101,7 @@
                     HeightRequest="50"
                     CornerRadius="5"
                     Clicked="NavigateToItineraryPage"
+                    CommandParameter="{Binding TripId}"
                 />
             </StackLayout>
 
