Added maps page and navigation to it from itinerary page

--- a/Travely.Client/Pages/EditTripPage.xaml
+++ b/Travely.Client/Pages/EditTripPage.xaml
@@ -149,7 +149,8 @@
                                 Command="{Binding AddNotesCommand}"
                                 Source="notepad.png" 
                                 HorizontalOptions="End"
-                                WidthRequest="30" HeightRequest="30"
+                                WidthRequest="30" 
+                                HeightRequest="30"
                                 Margin="30,0,5,0"/>
                         </Grid>
                     </Frame>
