--- a/Travely.Client/Pages/ItineraryPage.xaml
+++ b/Travely.Client/Pages/ItineraryPage.xaml
@@ -4,10 +4,9 @@
              xmlns:resources="clr-namespace:Travely.Client.Resources.UIResources"
              x:Class="Travely.Client.Pages.ItineraryPage"
              Title="{x:Static resources:PageNameResources.ItineraryPageName}">
-
+    
     <ScrollView>
         <VerticalStackLayout>
-
             <Label Text="{x:Static resources:ItineraryResources.Weather}" FontSize="25" FontAttributes="Bold" Margin="0,20,0,0" VerticalOptions="Center" HorizontalOptions="Center" />
             <Frame Margin="10" VerticalOptions="Center" HorizontalOptions="Center">
                 <HorizontalStackLayout Spacing="65" VerticalOptions="Center" HorizontalOptions="Center">
@@ -17,15 +16,15 @@
                     </StackLayout>
                     <StackLayout>
                         <ImageButton Source="wind.png" WidthRequest="30" HeightRequest="30" />
-                        <Label Text="12" HorizontalTextAlignment="Center" VerticalTextAlignment="Center"  TextColor="Black"  />
+                        <Label Text="12" HorizontalTextAlignment="Center" VerticalTextAlignment="Center" TextColor="Black"  />
                     </StackLayout>
                     <StackLayout>
                         <ImageButton Source="humidity.png" WidthRequest="30" HeightRequest="30" />
-                        <Label Text="12" HorizontalTextAlignment="Center" VerticalTextAlignment="Center"  TextColor="Black"  />
+                        <Label Text="12" HorizontalTextAlignment="Center" VerticalTextAlignment="Center" TextColor="Black"  />
                     </StackLayout>
                     <StackLayout>
                         <ImageButton Source="cloudy.png" WidthRequest="30" HeightRequest="30" />
-                        <Label Text="12" HorizontalTextAlignment="Center" VerticalTextAlignment="Center"  TextColor="Black"  />
+                        <Label Text="12" HorizontalTextAlignment="Center" VerticalTextAlignment="Center" TextColor="Black"  />
                     </StackLayout>
                 </HorizontalStackLayout>
             </Frame>
@@ -40,9 +39,32 @@
                                     <Label Text="{Binding Key}" FontSize="18" FontAttributes="Bold" Margin="20"/>
                                 </HorizontalStackLayout>
                                 <Frame BorderColor="Black" CornerRadius="5" Padding="0" Margin="5" >
-                                    <Grid>
+                                    <Grid ColumnDefinitions="Auto,*,Auto,Auto,Auto">
                                         <Image Source="location.png" VerticalOptions="Center" WidthRequest="20" HorizontalOptions="Start" Margin="10"/>
-                                        <Entry Placeholder="{x:Static resources:ItineraryResources.AddPlace}" Margin="30,0,0,0"/>
+
+                                        <Entry 
+                                            Grid.Column="1"
+                                            Placeholder="{x:Static resources:ItineraryResources.AddPlace}" 
+                                            IsReadOnly="True"
+                                            Margin="30,0,0,0"/>
+
+                                        <ImageButton 
+                                            Grid.Column="2" 
+                                            Command="{Binding AddSpotCommand}"
+                                            Source="notepad.png" 
+                                            HorizontalOptions="End"
+                                            WidthRequest="30" 
+                                            HeightRequest="30"
+                                            Margin="30,0,5,0"/>
+
+                                        <ImageButton 
+                                            Grid.Column="3" 
+                                            Clicked="NavigateToMapsPage"
+                                            Source="bed.png" 
+                                            HorizontalOptions="End"
+                                            WidthRequest="30" 
+                                            HeightRequest="30"
+                                            Margin="30,0,5,0"/>
                                     </Grid>
                                 </Frame>
 
