Added logic so that the map would open on the trip's country

--- a/Travely.Client/Pages/ItineraryPage.xaml
+++ b/Travely.Client/Pages/ItineraryPage.xaml
@@ -60,6 +60,7 @@
                                         <ImageButton 
                                             Grid.Column="3" 
                                             Clicked="NavigateToMapsPage"
+                                            CommandParameter="{Binding Source={RelativeSource AncestorType={x:Type ContentPage}}, Path=BindingContext.TripId}"
                                             Source="bed.png" 
                                             HorizontalOptions="End"
                                             WidthRequest="30" 
