--- a/Travely.Client/Pages/MapPage.xaml
+++ b/Travely.Client/Pages/MapPage.xaml
@@ -2,8 +2,8 @@
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:maps="http://schemas.microsoft.com/dotnet/2021/maui/maps"
-             x:Class="Travely.Client.Pages.MapsPage"
-             Title="MapsPage">
+             x:Class="Travely.Client.Pages.MapPage"
+             Title="MapPage">
 
     <maps:Map x:Name="map" />
 </ContentPage>
