Added caching for taking the country coordinates and also added invariant culture

--- a/Travely.Client/Pages/MapPage.xaml
+++ b/Travely.Client/Pages/MapPage.xaml
@@ -5,5 +5,7 @@
              x:Class="Travely.Client.Pages.MapPage"
              Title="MapPage">
 
-    <maps:Map x:Name="map" />
+    <maps:Map 
+        x:Name="map" 
+        MapClicked="PinLocationOnMap"/>
 </ContentPage>
