--- a/Travely.Client/Pages/EditTripPage.xaml
+++ b/Travely.Client/Pages/EditTripPage.xaml
@@ -27,7 +27,7 @@
                     <Image Source="{Binding CountryFlagUrl}" HeightRequest="60" HorizontalOptions="Center" />
 
                     <StackLayout Grid.Column="1" VerticalOptions="Center" HorizontalOptions="Center" Spacing="65" Margin="20">
-                        <Grid ColumnSpacing="10">
+                        <Grid ColumnSpacing="20">
                             <Grid.RowDefinitions>
                                 <RowDefinition Height="Auto"/>
                                 <RowDefinition Height="Auto"/>
@@ -95,7 +95,7 @@
 
             <StackLayout Padding="10">
                 <Button Text="{x:Static resources:TripsResources.ViewItineraryButton}"
-                    BackgroundColor="Black"
+                    BackgroundColor="#415a77"
                     TextColor="#ffffff"
                     FontAttributes="Bold"
                     HeightRequest="50"
@@ -160,8 +160,9 @@
             <Label Text="{Binding AlertMessage}"
                 TextColor="Red"
                 FontSize="14"
-                Margin="20,0,10,10"
-                IsVisible="{Binding AlertMessage, Converter={StaticResource StringNotNullOrEmptyConverter}}" />
+                Margin="20,0,10,10" />
+            <!--="{Binding AlertMessage, Converter={StaticResource StringNotNullOrEmptyConverter}}" />
+                -->
 
             <Frame Margin="5,0,10,0" HeightRequest="{Binding IsDepartureExpanded, Converter={StaticResource ExpandedToHeightConverter}}">
                 <StackLayout>
@@ -170,14 +171,7 @@
                         <Label Text="{x:Static resources:TripsResources.DepartureFlight}" FontSize="18" FontAttributes="Bold" Margin="20"/>
                     </HorizontalStackLayout>
 
-                    <Frame BorderColor="Black" CornerRadius="5" Padding="0" Margin="5" >
-                        <Grid>
-                            <Image Source="plane_color.png" VerticalOptions="Center" WidthRequest="20" HorizontalOptions="Start" Margin="10"/>
-                            <Entry Placeholder="{x:Static resources:TripsResources.SearchAirline}" Margin="30,0,0,0"/>
-                            <ImageButton Grid.Column="3" Source="add_btn.png" HorizontalOptions="End" WidthRequest="30" HeightRequest="30" Margin="30,0,5,0"/>
-                        </Grid>
-                    </Frame>
-                    
+
                     <Frame BorderColor="Black" CornerRadius="5" Padding="0" Margin="5" >
                         <Grid>
                             <Image Source="plane_ticket.png" VerticalOptions="Center" WidthRequest="20" HorizontalOptions="Start" Margin="10"/>
@@ -196,11 +190,26 @@
                         </Grid>
                     </Frame>
 
-                    <Frame BorderColor="Black" CornerRadius="5" Padding="0" Margin=" 5">
+                    <Frame BorderColor="Black" CornerRadius="5" Padding="0" Margin="5" >
                         <Grid>
-                            <Image Source="schedule.png" VerticalOptions="Center" WidthRequest="20" HorizontalOptions="Start" Margin="10"/>
-                            <DatePicker Format="dd.MM.yyyy" Margin="30,0,0,0" />
-                            <ImageButton Grid.Column="3" Source="add_btn.png" HorizontalOptions="End" WidthRequest="30" HeightRequest="30" Margin="30,0,5,0"/>
+                            <Image Source="plane_color.png" VerticalOptions="Center" WidthRequest="20" HorizontalOptions="Start" Margin="10"/>
+                            <Label Text="{x:Static resources:TripsResources.AirPortOrigin}" Margin="30,10,0,0"/>
+                        </Grid>
+                    </Frame>
+
+                    <Frame BorderColor="Black" CornerRadius="5" Padding="0" Margin="5" >
+                        <Grid>
+                            <Image Source="plane_color.png" VerticalOptions="Center" WidthRequest="20" HorizontalOptions="Start" Margin="10"/>
+                            <Label 
+                                Text="{x:Static resources:TripsResources.AirPortDestination}" 
+                                Margin="30,10,0,0"/>
+                        </Grid>
+                    </Frame>
+
+                    <Frame BorderColor="Black" CornerRadius="5" Padding="0" Margin="5" >
+                        <Grid>
+                            <Image Source="loading.png" VerticalOptions="Center" WidthRequest="20" HorizontalOptions="Start" Margin="10"/>
+                            <Label Text="{x:Static resources:TripsResources.Status}" Margin="30,10,0,0"/>
                         </Grid>
                     </Frame>
                 </StackLayout>
@@ -215,21 +224,13 @@
 
                     <Frame BorderColor="Black" CornerRadius="5" Padding="0" Margin="5" >
                         <Grid>
-                            <Image Source="plane_color.png" VerticalOptions="Center" WidthRequest="20" HorizontalOptions="Start" Margin="10"/>
-                            <Entry Placeholder="{x:Static resources:TripsResources.SearchAirline}" Margin="30,0,0,0"/>
-                            <ImageButton Grid.Column="3" Source="add_btn.png" HorizontalOptions="End" WidthRequest="30" HeightRequest="30" Margin="30,0,5,0"/>
-                        </Grid>
-                    </Frame>
-
-                    <Frame BorderColor="Black" CornerRadius="5" Padding="0" Margin="5" >
-                        <Grid>
                             <Image Source="plane_ticket.png" VerticalOptions="Center" WidthRequest="20" HorizontalOptions="Start" Margin="10"/>
                             <Entry 
-                                Placeholder="{x:Static resources:TripsResources.FlightNumber}" 
-                                Text="{Binding ArrivalFlightNumber}"
-                                Margin="30,0,0,0"/>
+                              Placeholder="{x:Static resources:TripsResources.FlightNumber}" 
+                              Text="{Binding DepartureFlightNumber}"
+                               Margin="30,0,0,0"/>
                             <ImageButton 
-                                Command="{Binding SearchArrivalFlightCommand}"
+                                Command="{Binding SearchDepartureFlightCommand}"
                                 Grid.Column="3" 
                                 Source="add_btn.png" 
                                 HorizontalOptions="End" 
@@ -239,11 +240,25 @@
                         </Grid>
                     </Frame>
 
-                    <Frame BorderColor="Black" CornerRadius="5" Padding="0" Margin="5">
+                    <Frame BorderColor="Black" CornerRadius="5" Padding="0" Margin="5" >
                         <Grid>
-                            <Image Source="schedule.png" VerticalOptions="Center" WidthRequest="20" HorizontalOptions="Start" Margin="10"/>
-                            <DatePicker Format="dd.MM.yyyy" Margin="30,0,0,0"/>
-                            <ImageButton Grid.Column="3" Source="add_btn.png" HorizontalOptions="End" WidthRequest="30" HeightRequest="30" Margin="30,0,5,0"/>
+                            <Image Source="plane_color.png" VerticalOptions="Center" WidthRequest="20" HorizontalOptions="Start" Margin="10"/>
+                            <Label Text="{x:Static resources:TripsResources.AirPortOrigin}" Margin="30,10,0,0"/>
+                        </Grid>
+                    </Frame>
+
+                    <Frame BorderColor="Black" CornerRadius="5" Padding="0" Margin="5" >
+                        <Grid>
+                            <Image Source="plane_color.png" VerticalOptions="Center" WidthRequest="20" HorizontalOptions="Start" Margin="10"/>
+                            <Label Text="{x:Static resources:TripsResources.AirPortDestination}" 
+                                Margin="30,10,0,0"/>
+                        </Grid>
+                    </Frame>
+
+                    <Frame BorderColor="Black" CornerRadius="5" Padding="0" Margin="5" >
+                        <Grid>
+                            <Image Source="loading.png" VerticalOptions="Center" WidthRequest="20" HorizontalOptions="Start" Margin="10"/>
+                            <Label Text="{x:Static resources:TripsResources.Status}" Margin="30,10,0,0"/>
                         </Grid>
                     </Frame>
                 </StackLayout>
